첫번째 초안문서 정리

--- a/404.html
+++ b/404.html
@@ -14,9 +14,9 @@
 <title>404 Page not found | Hello Kikcode</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" >
-<link rel="stylesheet" href="/book.min.0b1f85bb66255744648c595522d58ea8b2c8b9d66bc5d3a2bb52b81ca7e4c24b.css" integrity="sha256-Cx&#43;Fu2YlV0RkjFlVItWOqLLIudZrxdOiu1K4HKfkwks=" crossorigin="anonymous">
+<link rel="stylesheet" href="/book.min.91ee103e9bcd403c4a1939651654bff5afea6f3266bfe50e01ff1f4e66738901.css" integrity="sha256-ke4QPpvNQDxKGTllFlS/9a/qbzJmv&#43;UOAf8fTmZziQE=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.d29b79a8d032ec36789e2670acf351d8ded0f81bf0f2da4939ecfb837f740f25.js" integrity="sha256-0pt5qNAy7DZ4niZwrPNR2N7Q&#43;Bvw8tpJOez7g390DyU=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.bf4ae128013182e4b0b7dab3ef8d85e73645342699d9dffbfb88413e19c34c6a.js" integrity="sha256-v0rhKAExguSwt9qz742F5zZFNCaZ2d/7&#43;4hBPhnDTGo=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
