--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://kikcode.github.io/404.html" />
-<title>404 Page not found | Hello Kikcode</title>
+<title>404 Page not found | Kikcode</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" >
 <link rel="stylesheet" href="/book.min.91ee103e9bcd403c4a1939651654bff5afea6f3266bfe50e01ff1f4e66738901.css" integrity="sha256-ke4QPpvNQDxKGTllFlS/9a/qbzJmv&#43;UOAf8fTmZziQE=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.923d1f2f56756374770c68bc089742cad4ff004d378fda087e5a5f99f884a099.js" integrity="sha256-kj0fL1Z1Y3R3DGi8CJdCytT/AE03j9oIflpfmfiEoJk=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.0aab406951edb182db5a98da59141da24d708e2363c58094fd6263cf777157d8.js" integrity="sha256-CqtAaVHtsYLbWpjaWRQdok1wjiNjxYCU/WJjz3dxV9g=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -41,7 +41,7 @@ https://github.com/alex-shpak/hugo-book
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <h3>
-          <a href="/">Hello Kikcode</a>
+          <a href="/">Kikcode</a>
         </h3>
       </div>
     </main>
